# ts_call_work

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  tasks.py
app/api/: deps.py
app/api/routes/: calls.py  recordings.py
app/core/: celery_app.py  config.py  db.py
app/models/: __init__.py  call.py  recording.py
app/schemas/: call.py
app/services/: audio.py  calls.py  recordings.py  storage.py
docs/: PROJECT_GUIDE.md
migrations/: env.py
migrations/versions/: 20250926_0001_initial.py  20250927_0002_recording_silence_marks.py
scripts/: smoke_test.py
